# magellan

jr_bringup/: CMakeLists.txt  package.xml
jr_bringup/launch/: bringup.launch  camera.launch  gps.launch  motors.launch
jr_bringup/param/: motors.yml
jr_bringup/scripts/: base_controller  deadman  mcp
jr_bringup/udev/: 99-gps.rules  99-serial-radio.rules
kill_switch/src/: main.cpp
