<?xml version="1.0"?>
<package>
  <name>jr_bringup</name>
  <version>0.0.0</version>
  <description>The jr_bringup package</description>

  <maintainer email="jon.binney@gmail.com">Jon Binney</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>teleop_twist_keyboard</run_depend>
</package>
